<resources>
    <string name="app_name">Desafio4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="save_game">SAVE GAME</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
</resources>