<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".newgame.view.NewGameFragment"
    android:background="@drawable/backgroud">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@id/mcvNewGame"
        app:layout_constraintEnd_toEndOf="@id/mcvNewGame"
        app:layout_constraintStart_toStartOf="@id/mcvNewGame"
        app:layout_constraintTop_toTopOf="@id/mcvNewGame">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvImageNewGame"
        android:layout_width="@dimen/dim_100_dp"
        android:layout_height="@dimen/dim_100_dp"
        app:cardCornerRadius="@dimen/dim_50_dp"
        android:backgroundTint="@color/secundary"
        android:padding="@dimen/dim_10_dp">
        <ImageView
            android:id="@+id/ivGameNewGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dim_10_dp"
            android:src="@drawable/ic_baseline_camera_alt_10"/>

    </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvNewGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/dim_10_dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dim_10_dp"
            android:layout_marginTop="@dimen/dim_50_dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/text_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/created_at"
            android:textColorHint="@color/text_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCreateAtNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColorHint="@color/text_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescriptionNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="6" />
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveNewGame"
                android:layout_marginTop="@dimen/dim_30_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_game"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>